# inventory

./: .gitignore  CMakeLists.txt  README.md  inventory.db  main.cpp  mymodel.cpp  mymodel.h  tutorial.cpp
